# neat-stuff-TESTONLY

./: .travis.yml  CMakeLists.txt  ChangeLog  make-dist  make-ppa  neat-stuff.lsm  packaging.conf
ci/: build  install  run-test
debian/: changelog  control  copyright  neat-desktop.install  neat-desktop.lintian-overrides  neat-desktop.postinst  neat-desktop.postrm  neat-development.install  neat-development.postrm  neat-management.install  neat-management.postinst  neat-management.postrm  not-installed  rules  watch
debian/upstream/: metadata
rpm/: neat-stuff.spec
src/: CMakeLists.txt
src/background/: Affiliation.text  Name.text  Settings.input  Subtitle.text  Title.text  URL.text  build-caption  build-overlay  make-a4  make-bootsplash  make-desktop  make-logo-texts  make-overlay
src/grub/: 02_neat_management_theme  06_neat_desktop_theme  19_neat_development_theme  42_neat_desktop_theme  CMakeLists.txt
src/system-info.d/: 18-neat
src/system-maintenance.d/: 18-neat
