#############################################################################
# PROGRAMS
#############################################################################


#############################################################################
# CONFIGURATION FILES
#############################################################################


#############################################################################
# SOURCE DIRECTORIES
#############################################################################

ADD_SUBDIRECTORY(background)
ADD_SUBDIRECTORY(grub)
